--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,30 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>html second layout</title>
+        <link rel="stylesheet" href="index.css" />
+    </head>
+  
+    <body>
+        <div class="container-one">
+            <div class="square-one">
+            
+            </div>
+            <div class="square-two">
+
+            </div>
+            <div class="circle-one">
+
+            </div>
+        </div>
+        <div class="container-two">
+            <div class="shadowbox">
+
+            </div>
+        </div>
+        <div class="container-three">
+            <h1>HELLO FRIENDS</h1>
+        </div>
+    </body>
+</html>
