second now done

--- a/second/index.html
+++ b/second/index.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="container-two">
-            <div class="shadowbox">
+            <div class="shadow-box">
 
             </div>
         </div>
